--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
          <h1>Rui Barbosa de Oliveira Junior | WWD 130</h1>
-        <img src="C:\Users\usuario\Desktop\BYU-I\WDD 130 - Web Fundamentals\W01 - Introdu\wdd130\images\profile.jpg" alt="Hello, my name is Rui Barbosa" width="200" >
+        <img src="images\profile.jpg" alt="Hello, my name is Rui Barbosa" width="200" >
         <p><br>My name is Rui Barbosa and I am from Alagoas, Brasil. <br>
         I enjoy to play acoustic guitar and sing, now I'm a <br>
         student from BYU-I by BYU Pathway Worldwide, my course <br>
