addicional css files

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <link rel="stylesheet" href="styles/styles.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title> Rui Barbosa de Oliveira Junior | WDD 130</title>
@@ -13,7 +14,7 @@
         </nav>
     </header>
     <main>
-         <h1>Rui Barbosa de Oliveira Junior | WWD 130</h1>
+         <h1>Rui Barbosa de Oliveira Junior | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Rui Barbosa" width="200" >
         <p><br>My name is Rui Barbosa and I am from Alagoas, Brasil. <br>
         I enjoy to play acoustic guitar and sing, now I'm a <br>
