--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
+        <title> Rui Barbosa de Oliveira Junior | WDD 130</title>
+        <meta name="Self presentation" content="I'm Rui Barbosa, from Alagoas, Brasil">
+        <meta name="Rui Barbosa" content="Rui Barbosa">
         <link rel="stylesheet" href="styles/styles.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title> Rui Barbosa de Oliveira Junior | WDD 130</title>
     </head>
     <body>
     <header>
@@ -21,6 +23,18 @@
         student from BYU-I by BYU Pathway Worldwide, my course <br>
         is Software Development.</p> 
     </main>
+    <aside>
+        <h2>Alagoas</h2>
+        <img src="images/state.webp" alt="Alagoas landscape">
+        <p> Alagoas is a small state in northeastern Brazil whose 
+            tropical coastline is marked by white sand beaches
+            lined with palm trees, crystal-clear lagoons and coral 
+            reefs. In Maceió, its capital, the famous Pajuçara and 
+            Ponta Verde beaches are located, with hotels, bars and 
+            restaurants. Coral reefs decorate the coast north of Maceió,
+             which is why it is nicknamed Costa dos Corais<br> -Wiki
+            </p>
+    </aside>
     <footer>
     <p>©2024 🌳Rui Barbosa 🌳 Alagoas, Brasil</p>
     </footer>
