--- a/w03/wwr/about.html
+++ b/w03/wwr/about.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Rui Barbosa" />
-    <meta name="description"
-  content="Description about us, who we are, who are our purpose, and how we get here" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
-    <title>About us</title>
+    <meta name="author" content="Rui Barbosa BYU-I | WDD 130"/>
+    <meta name="description" content="Description about us, who we are, who are our purpose, and how we get here" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/rafting.css">
+
+    <title>Whitewater Rafting Club</title>
 
 
 
@@ -17,9 +20,9 @@
         <img src="images/raftinglogo.png" alt="logo-image" />
         <div class="center">
 
-        <h1> Whitewater Rafting Club - About us </h1>
+        <h1> Welcome to Whitewater Rafting Club Site</h1>
             <nav>
-                <a href="home.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href ="about.html">About Us</a>
                 <a href="trips.html">Trips</a>
                 <a href="contact.html">Contact Us</a>
@@ -28,26 +31,23 @@
     </header>
     <main>
         <div class="hero"> 
-        <img src="images/herologo.jpg" alt="imagerafting"  width="1000"> 
+        <img src="images/herologo.jpg" alt="heroimage" > 
         <h1> Whitewater Rafting Club</h1>
         <article>
-            <img src="images/rafting.jpg" alt="imageexperience" width="500">
-            <p> Provide a great and funny experience for you!</p>
+            <img src="images/rafting.png" alt="imageexperience" >
+            <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem quis, molestias sunt exercitationem nemo dignissimos repudiandae! Incidunt obcaecati repudiandae quia vero facilis. Quis molestias laudantium asperiores maxime animi eaque dolorum.</p>
         </article>
 <section>
     <h2> History</h2>
-    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.
-         Doloribus quia, sunt similique provident cupiditate, nemo 
-         explicabo eaque nulla dolorem nam magnam facere. Fuga ipsum
-          assumenda soluta dolore tempora, nobis officiis.</p>
+    <p> Lorem ipsum dolor sit amet consectetur adipisicing elit.Doloribus quia, sunt similique provident cupiditate, nemo explica eaque nulla dolorem nam magnam facere. Fuga ipsum assumenda soluta dolore tempora, nobis officiis.</p>
 </section>
 <section>
-    <h2>Adventure Waits You!</h2>
-    <img src="images/rafting1.jpg" alt="rafting1" width="250">
-    <img src="images/rafting2.jpg" alt="rafting2" width="250">
-    <img src="images/rafting3.jpg" alt="rafting3" width="250">
-    <img src="images/rafting4.png" alt="rafting4" width="250">
-    <img src="images/rafting5.jpg" alt="rafting5" width="250">
+    <h2>Adventure Waits For You!</h2>
+    <img src="images/rafting1.jpg" alt="rafting1" >
+    <img src="images/rafting2.jpg" alt="rafting2" >
+    <img src="images/rafting3.jpg" alt="rafting3" >
+    <img src="images/rafting4.jpg" alt="rafting4" >
+    <img src="images/rafting5.jpg" alt="rafting5" >
 
 </section>    
 
